# Ski_resorts

./: README.md  pyproject.toml
ullr/: manage.py
ullr/openweatherapp/: api.py  apps.py
ullr/openweatherapp/definitions/: responses.py
ullr/ullr/: asgi.py  settings.py  urls.py  wsgi.py
