[tool.poetry]
name = "ullr"
version = "0.1.0"
description = ""
authors = ["Chris Kotsou, Nick Tsepetzidis"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-filter = "^21.1"
django-rest-framework = "^0.1.0"
fabric = "^2.6.0"
pydantic = "^1.8.2"
yapf = "^0.31.0"
requests = "^2.26.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
